syntax = "proto3";
package dogma.messaging.v1;

option go_package = "github.com/dogmatiq/infix/draftspecs/messagingspec";

// UnrecognizedApplication is an error-details value for INVALID_ARGUMENT
// errors that occurred because a specific application key was not recognized by
// the server.
message UnrecognizedApplication {
  // ApplicationKey is the identity of the application that produced the error.
  string application_key = 1;
}

// UnrecognizedMessage is an error-details value for INVALID_ARGUMENT errors
// that occurred because a specific message type was not recognized by the
// server.
message UnrecognizedMessage {
  // Name is the name of the message type.
  string name = 2;
}
